@@ -61,7 +61,7 @@ class Calendar_Admin {
     {
         PHPWS_Core::initCoreClass('DBPager.php');
         PHPWS_Core::initModClass('calendar', 'Suggestion.php');
-        translate('calendar');
+
         $pager = new DBPager('calendar_suggestions', 'Calendar_Suggestion');
         $pager->setModule('calendar');
         $pager->setTemplate('admin/approval.tpl');
@@ -77,7 +77,6 @@ class Calendar_Admin {
 
         $this->title = _('Suggested events');
         $this->content = $pager->get();
-        translate();
     }
 
     function approveSuggestion($id)
@@ -128,7 +127,6 @@ class Calendar_Admin {
 
     function editEvent($event)
     {
-        translate('calendar');
         if ($event->id) {
             $this->title = _('Update event');
         } else {
@@ -136,12 +134,10 @@ class Calendar_Admin {
         }
 
         $this->content = $this->event_form($event);
-        translate();
     }
 
     function editSchedule()
     {
-        translate('calendar');
         if ($this->calendar->schedule->id) {
             $this->title = _('Update schedule');
         } else {
@@ -149,7 +145,6 @@ class Calendar_Admin {
         }
 
         $this->content = $this->calendar->schedule->form();
-        translate();
     }
 
     /**
@@ -157,7 +152,6 @@ class Calendar_Admin {
      */
     function event_form(&$event, $suggest=false)
     {
-        translate('calendar');
         Layout::addStyle('calendar');
         
         // the form id is linked to the check_date javascript
@@ -393,7 +387,6 @@ class Calendar_Admin {
             javascript('modules/calendar/edit_event');
             javascript('modules/calendar/check_date');
         }
-        translate();
         return PHPWS_Template::process($tpl, 'calendar', 'admin/forms/edit_event.tpl');
     }
 
@@ -402,7 +395,6 @@ class Calendar_Admin {
     {
         $panel = new PHPWS_Panel('calendar');
 
-        translate('calendar');
         $vars['aop'] = 'schedules';
         $tabs['schedules'] = array('title' => _('Schedules'),
                                    'link' => PHPWS_Text::linkAddress('calendar', $vars));
@@ -427,7 +419,6 @@ class Calendar_Admin {
         }
 
         $panel->quickSetTabs($tabs);
-        translate();
         return $panel;
     }
 
@@ -436,7 +427,6 @@ class Calendar_Admin {
      */
     function main()
     {
-        translate('calendar');
         if (!Current_User::allow('calendar')) {
             Current_User::disallow();
             return;
@@ -604,7 +594,6 @@ class Calendar_Admin {
             $panel->setContent($final);
             Layout::add(PHPWS_ControlPanel::display($panel->display()));
         }
-        translate();
     }
 
     /**
@@ -612,7 +601,6 @@ class Calendar_Admin {
      */
     function postEvent()
     {
-        translate('calendar');
         $event = $this->calendar->schedule->loadEvent();
         $event->loadPrevious();
         if ($event->post()) {
@@ -673,7 +661,6 @@ class Calendar_Admin {
         } else {
             $this->editEvent($event);
         }
-        translate();
     }
 
     function postSettings()
@@ -789,7 +776,6 @@ class Calendar_Admin {
 
     function postSchedule()
     {
-        translate('calendar');
         if ($this->calendar->schedule->post()) {
             if (!$this->allowSchedulePost()) {
                 Current_User::disallow();
@@ -826,7 +812,6 @@ class Calendar_Admin {
             $this->message = $this->calendar->schedule->_error;
             $this->editSchedule();
         }
-        translate();
     }
 
     function repeatDaily(&$event)
@@ -859,7 +844,6 @@ class Calendar_Admin {
 
     function repeatEvent($event)
     {
-        translate('calendar');
         if (!$event->id) {
             $this->content = _('This event does not exist.');
             return;
@@ -872,7 +856,6 @@ class Calendar_Admin {
             $js = false;
         }
         $this->content = $event->repeat($js);
-        translate();
     }
 
     function repeatEvery(&$event)
@@ -1012,9 +995,7 @@ class Calendar_Admin {
     function repeatWeekly(&$event)
     {
         if (!isset($_POST['weekday_repeat']) || !is_array($_POST['weekday_repeat'])) {
-            translate('calendar');
             $this->message = _('You must choose which weekdays to repeat.');
-            translate();
             return false;
         }
         
@@ -1051,7 +1032,6 @@ class Calendar_Admin {
 
     function scheduleListing()
     {
-        translate('calendar');
         $this->title = _('Schedules');
 
         PHPWS_Core::initCoreClass('DBPager.php');
@@ -1094,7 +1074,6 @@ class Calendar_Admin {
         $pager->db->addJoin('left', 'calendar_schedule', 'users', 'user_id', 'id');
 
         $pager->initialize();
-        translate();
         $this->content = $pager->get();
     }
 
@@ -1108,7 +1087,6 @@ class Calendar_Admin {
 
     function settings()
     {
-        translate('calendar');
         $form = new PHPWS_Form('calendar_settings');
         $form->addHidden('module', 'calendar');
         $form->addHidden('aop', 'post_settings');
@@ -1158,7 +1136,6 @@ class Calendar_Admin {
 
         $this->content = PHPWS_Template::process($tpl, 'calendar', 'admin/settings.tpl');
         $this->title   = _('Calendar settings');
-        translate();
     }
 
 }
